--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.5",
     "swagger-ui-express": "^5.0.0",
     "yamljs": "^0.3.0"
